--- a/less/_icon.less
+++ b/less/_icon.less
@@ -13,76 +13,99 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-person:before {
-  content: "\e90c";
-  color: #5c5df7;
+.icon-print:before {
+  content: "\e917";
+  color: #fff;
+}
+.icon-pdf:before {
+  content: "\e918";
+  color: #fff;
+}
+.icon-doc:before {
+  content: "\e919";
+  color: #fff;
+}
+.icon-download:before {
+  content: "\e916";
+}
+.icon-star-full:before {
+  content: "\e913";
+}
+.icon-star:before {
+  content: "\e914";
+}
+.icon-add-photo:before {
+  content: "\e915";
+}
+.icon-arrow-left-bold:before {
+  content: "\e911";
+}
+.icon-arrow-right-bold:before {
+  content: "\e912";
+}
+.icon-active:before {
+  content: "\e900";
 }
 .icon-all:before {
-  content: "\e90d";
+  content: "\e901";
+  color: #5c5df7;
+}
+.icon-arrow-left:before {
+  content: "\e902";
+  color: #3c4153;
+}
+.icon-close:before {
+  content: "\e903";
+}
+.icon-drop:before {
+  content: "\e904";
+  color: #7884ac;
+}
+.icon-economy:before {
+  content: "\e905";
+  color: #5c5df7;
+}
+.icon-fb:before {
+  content: "\e906";
+  color: #3c4153;
+}
+.icon-ins:before {
+  content: "\e907";
+  color: #3c4153;
+}
+.icon-messenger:before {
+  content: "\e908";
+  color: #3c4153;
+}
+.icon-person:before {
+  content: "\e909";
   color: #5c5df7;
 }
 .icon-save-world:before {
-  content: "\e90e";
+  content: "\e90a";
   color: #5c5df7;
 }
-.icon-economy:before {
+.icon-skype:before {
+  content: "\e90b";
+  color: #3c4153;
+}
+.icon-slider-arrow-left:before {
+  content: "\e90c";
+  color: #7c85f4;
+}
+.icon-slider-arrow-right:before {
+  content: "\e90d";
+  color: #7c85f4;
+}
+.icon-telegram:before {
+  content: "\e90e";
+  color: #3c4153;
+}
+.icon-vider:before {
   content: "\e90f";
-  color: #5c5df7;
+  color: #3c4153;
 }
 .icon-save-work:before {
   content: "\e910";
   color: #5c5df7;
 }
-.icon-drop-icon:before {
-  content: "\e90b";
-  color: #7884ac;
-}
-.icon-close:before {
-  content: "\e90a";
-  color: #636c8a;
-}
-.icon-fb:before {
-  content: "\e904";
-  color: #3c4153;
-}
-.icon-ins:before {
-  content: "\e905";
-  color: #3c4153;
-}
-.icon-vider:before {
-  content: "\e906";
-  color: #3c4153;
-}
-.icon-messenger:before {
-  content: "\e907";
-  color: #3c4153;
-}
-.icon-skype:before {
-  content: "\e908";
-  color: #3c4153;
-}
-.icon-telegram:before {
-  content: "\e909";
-  color: #3c4153;
-}
-.icon-slider-arrow-right:before {
-  content: "\e902";
-  color: #7c85f4;
-}
-.icon-slider-arrow-left:before {
-  content: "\e903";
-  color: #7c85f4;
-}
-.icon-active:before {
-  content: "\e901";
-  color: #fff;
-}
-.icon-arrow-header:before {
-  content: "\e900";
-  color: #3c4153;
-}
-.icon-arrow-left:before {
-  content: "\e912";
-  color: #3c4153;
-}
-
