--- a/less/_footer.less
+++ b/less/_footer.less
@@ -5,8 +5,8 @@
 .footer__wrapper {
     display: flex;
     justify-content: space-between;
-    padding-top: 32px;
-    padding-bottom: 32px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .footer-caption {
@@ -23,13 +23,15 @@
     display: flex;
     flex-wrap: wrap;
     max-height: 65px;
-    margin-top: 17px;
-    margin-bottom: 45px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    font-size: 14px;
+    line-height: 21px;
 }
 
 .footer-contact__item {
     width: 60%;
-    margin-bottom: 7px;
+    margin-bottom: 10px;
     
     &:nth-child(2n) {
         width: 40%;
@@ -44,7 +46,7 @@
 .footer-id-company {
     font-size: 14px;
     line-height: 21px;
-    width: 500px;
+    width: 580px;
 }
 
 .footer-social {
@@ -99,13 +101,15 @@
 
 .footer-copyright {
     border-top: 1px solid #C1C7DD;
-    padding: 32px 20px;
+    padding: 20px;
+    color: #636C8A;
 }
 
 .footer-copyright__wrapper {
     display: flex;
     justify-content: space-between;
     font-size: 14px;
+    line-height: 21px;
     
     a {
         text-decoration: none;
