--- a/less/_general-style.less
+++ b/less/_general-style.less
@@ -65,8 +65,8 @@ body {
 }
 
 .container {
-    max-width: 1150px;
-    padding: 0 20px;
+    max-width: 1220px;
+    padding: 0 25px;
     margin: 0 auto;
 }
 
@@ -76,14 +76,15 @@ body {
 }
 
 .main-caption-m {
-    font-size: 48px;
-    line-height: 62px;
+    font-size: 36px;
+    line-height: 130%;
     text-align: center;
 }
 
 .main-caption-s {
-    font-size: 36px;
-    line-height: 43px;
+    font-size: 30px;
+    line-height: 110%;
+    text-align: center;
 }
 
 .main_button-color {
@@ -105,6 +106,8 @@ body {
     position: relative;
     z-index: 1;
     overflow: hidden;
+    box-shadow: 0px 4px 8px rgba(0, 9, 247, 0.35);
+    text-decoration: none;
     
     &.active {
         .decor {
@@ -132,7 +135,7 @@ body {
         clip-path: circle(0px at center);
         background-color: #4358FF;
         z-index: 1;
-        transition: clip-path .8s;
+        transition: clip-path 1s;
     }
 }
 
@@ -157,6 +160,7 @@ body {
     z-index: 1;
     overflow: hidden;
     margin: 0px auto;
+    text-decoration: none;
     
     &.active {
         .decor {
@@ -185,10 +189,74 @@ body {
         clip-path: circle(0px at center);
         background-color: #E6E6FF;
         z-index: 1;
-        transition: clip-path .8s;
+        transition: clip-path 1s;
     }
 }
 
+.main-button-shadow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 250px;
+    width: 100%;
+    height: 52px;
+    font-size: 13px;
+    line-height: 150%;
+    font-weight: 700;
+    text-decoration: none;
+    text-align: center;
+    text-transform: uppercase;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 8px rgba(60, 65, 83, 0.25);
+    border-radius: 30px;
+    transition: color .4s, box-shadow .4s;
+    
+    .icon-download {
+        padding-right: 10px;
+    }
+}
+
+.input_wrapper {
+    display: block;
+    width: 100%;
+    position: relative;
+    
+    &.error {
+        .main_input {
+            border-color: #EB5757;
+        }
+    }
+    
+    .input-text-error {
+        display: block;
+    }
+    
+    &.disabled {
+        pointer-events: none;
+        
+        .main_input {
+            border-color: #7884AC;
+        }
+        
+        .input-caption {
+            color: #BBC1D5;
+        }
+    }
+}
+
+.input-text-error {
+    display: none;
+    font-size: 12px;
+    line-height: 120%;
+    color: #EB5757;
+    position: absolute;
+    left: 0px;
+    bottom: -17px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 100%;
+}
 
 .main_input {
     font-size: 16px;
@@ -214,20 +282,242 @@ body {
     &:focus {
         border-color: #3C4153;
     }
+}
+
+.main_input-textarea {
+    height: 140px;
+    padding-top: 15px;
+    resize: none;
+}
+
+.input-caption {
+    display: block;
+    font-size: 14px;
+    line-height: 21px;
+    font-weight: 700;
+    margin-bottom: 7px;
+}
+
+.general-more {
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 150%;
+    color: #0009F7;
+    letter-spacing: 0.012em;
+    text-transform: uppercase;
+    transition: color .4s;
+}
+
+.stars__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0px auto 32px;
     
-    &.active {
-        border-color: #7884AC;
+    h5 {
+        font-size: 14px;
+        line-height: 21px;
+        margin-bottom: 8px;
     }
 }
 
-.input_wrapper {
-    p {
-        font-size: 14px;
-        line-height: 21px;
-        font-weight: 700;
-        margin-bottom: 7px;
+.stars__list {
+    display: flex;
+    
+    &.checked {
+        .stars__item {
+            .icon-star {
+                &::before {
+                    content: "\e913";
+                }
+            }
+        }
     }
 }
+
+.stars__item {
+    font-size: 20px;
+    color: #0009F7;
+    cursor: pointer;
+    padding-right: 5px;
+    
+    &:last-child {
+        padding-right: 0px;
+    }
+    
+    &.active {
+        ~ .stars__item {
+            .icon-star {
+                &::before {
+                    content: "\e914";
+                }
+            }
+        }
+    }
+}
+
+.checkbox__wrapper {
+    display: flex;
+    align-items: center;
+    position: relative;
+    cursor: pointer;
+    user-select: none;
+    font-size: 14px;
+    line-height: 21px;
+    
+    .text {
+        transition: color .4s, text-shadow .2s;
+    }
+}
+
+.checkbox__wrapper-policy {
+    align-items: flex-start;
+    margin-bottom: 13px;
+    
+    .custome-check {
+        margin-top: 3px;
+    }
+}
+
+.input-checkbox {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    z-index: -1;
+    opacity: 0;
+        
+    &:checked {
+        + .custome-check {
+            // border-color: #5C5DF7;
+            // background-color: #5C5DF7;
+            
+            .icon-active {
+                opacity: 1;
+            }
+            
+            // ~ .text {
+            //     color: #5C5DF7;
+            //     text-shadow: 0.1px 0 0 #5C5DF7;
+            // }
+        }
+    }
+}
+
+.custome-check {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 14px;
+    height: 14px;
+    margin-right: 10px;
+    border: 1px solid #3C4153;
+    border-radius: 2px;
+    flex-shrink: 0;
+    transition: border-color .4s, background-color .4s;
+    position: relative;
+    
+    .icon-active {
+        content: "";
+        font-size: 6px;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%,-50%);
+        opacity: 0;
+        transition: opacity .4s;
+        color: #0009F7;
+    }
+}
+
+.general-drop {
+    .wrapper {
+        position: relative;
+    }
+    
+    .main-input {
+        cursor: pointer;
+    }
+    
+    .icon-drop {
+        position: absolute;
+        right: 20px;
+        top: 50%;
+        transform: translateY(-50%);
+        font-size: 10px;
+        transition: transform .4s;
+    }
+    
+    &.active {
+        .general-drop__list {
+            visibility: visible;
+            opacity: 1;
+            transition: visibility 0s 0s, opacity .4s;
+        }
+        
+        .icon-drop {
+            transform: translateY(-50%) rotate(180deg);
+        }
+    }
+}
+
+.general-drop__list {
+    position: absolute;
+    left: 0px;
+    top: calc(100% + 5px);
+    width: 100%;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 15px rgba(200, 204, 218, 0.2);
+    border-radius: 30px;
+    z-index: 4;
+    overflow: hidden;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s .4s, opacity .4s;
+}
+
+.general-drop__item {
+    display: flex;
+    align-items: center;
+    padding: 14px 24px;
+    position: relative;
+    cursor: pointer;
+    transition: background-color .4s;
+    
+    &.active {
+        background-color: rgba(120, 132, 172, 0.15);
+    }
+}
+
+.policy-link {
+    color: #0009F7;
+    text-decoration: none;
+    transition: color .4s;
+}
+
+ .custome-radio {
+    width: 14px;
+    height: 14px;
+    border: 2px solid #5C5DF7;
+    position: relative;
+    border-radius: 50%;
+    flex-shrink: 0;
+    
+    &::before {
+        content: "";
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        width: 8px;
+        height: 8px;
+        transform: translate(-50%, -50%);
+        background-color: #5C5DF7;
+        opacity: 0;
+        border-radius: 50%;
+        transition: opacity .4s;
+    }
+}
+    
 /* Filter */
 
 .filter__wrapper {
@@ -245,8 +535,6 @@ body {
 }
 
 .filter__item {
-    display: flex;
-    align-items: center;
     border-radius: 30px;
     padding: 13px 20px;
     margin-right: 8px;
@@ -254,6 +542,11 @@ body {
     font-size: 14px;
     cursor: pointer;
     transition: background-color .4s, color .4s;
+    
+    .text {
+        display: flex;
+        align-items: center;
+    }
     
     
     &.active {
@@ -324,6 +617,7 @@ body {
 
 .breadcrumbs__list {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .breadcrumbs__item {
@@ -354,3 +648,5 @@ body {
         }
     }
 }
+
+/* Breadcrumbs */
