--- a/less/_header.less
+++ b/less/_header.less
@@ -90,14 +90,19 @@
         align-items: center;
         border: none;
         background: none;
+        
+        .text {
+            padding-right: 6px;
+        }
     }
     
-    .icon-arrow-header {
-        font-size: 5px;
-        padding-left: 6px;
+    .icon-drop {
+        font-size: 8px;
+        transition: transform .4s;
         
         &::before {
             transition: color .4s;
+            color: #3C4153;
         }
     }
     
@@ -105,7 +110,12 @@
         .burger-menu__list {
             opacity: 1;
             z-index: 1;
+            visibility: visible;
             animation: burger .8s;
+        }
+        
+        .icon-drop {
+            transform: rotate(180deg);
         }
     }
     
@@ -120,6 +130,7 @@
         box-shadow: 0px 4px 15px rgba(92, 93, 247, 0.25);
         padding: 16px;
         opacity: 0;
+        visibility: hidden;
         z-index: -1;
     }
 }
@@ -128,10 +139,10 @@
 .header__list {
     display: flex;
     align-items: center;
-    margin-left: 55px;
+    margin-left: auto;
     
-    &.callbcak {
-        margin-left: 0px;
+    &.callback {
+        margin-left: auto;
     }
 }
 
@@ -158,7 +169,7 @@
     
     &.active {
         opacity: 1;
-        z-index: 2;
+        z-index: 3;
     }
     
     .wrapper {
