--- a/less/_main-block-media.less
+++ b/less/_main-block-media.less
@@ -1,4 +1,4 @@
-@media (max-width: 1160px) {
+@media (max-width: 1210px) {
     /* Main Section */
     
     .main-section__wrapper {
@@ -296,24 +296,30 @@
     
     /* Notyfication block */
     
+    .notyfication {
+        margin-top: 80px;
+    }
+    
     .notyfication__wrapper {
         margin-bottom: 80px;
-        
-        &::before {
-            display: none;
-        }
-        
-        &::after {
-            display: none;
-        }
     }
     
     .notyfication-sub {
         margin-top: 24px;
     }
     
-    .notyfication-subscription {
-        padding: 30px 31px;
+    .notyfication-subscription__footer {
+        flex-direction: column;
+        
+        .main_button-color {
+            max-width: 100%;
+        }
+        
+        .input_wrapper {
+            max-width: 100%;
+            margin-right: 0px;
+            margin-bottom: 25px;
+        }
     }
     
     /* /Notyfication block */
@@ -364,10 +370,279 @@
     }
     
     /* /Helpful */
+    
+    /* Calendar */
+    
+    .calendar__wrapper {
+        flex-direction: column;
+    }
+    
+    .calendar__info {
+        margin-left: 24px;
+        width: calc(100% - 48px);
+        margin-top: 32px;
+    }
+    
+    /* Calendar */
+    
+    /* Full events */
+    
+    .full-events__wrapper {
+        margin: 80px 0px;
+    }
+    
+    .events-caption-city {
+        display: none;
+    }
+    
+    .events-caption-city-time {
+        display: block;
+    }
+
+    .events-city-time-tablet {
+        display: flex;
+        flex-direction: column;
+        
+        .time {
+            display: block;
+            margin-top: 4px;
+        }
+    }
+    
+    .events-position-time {
+        display: none;
+    }
+    
+    
+    .events-position-month {
+        width: calc(15% - 10px);
+    }
+
+    .events-position-date {
+        width: calc(14% - 10px);
+    }
+
+    .events-position-theme {
+        width: calc(40% - 10px);
+    }
+
+    .events-position-city {
+        width: calc(16% - 10px);
+        text-align: left;
+    }
+
+    .events-position-price {
+        width: calc(15% - 10px);
+        text-align: right;
+    }
+    
+    /* //Full events */
+    
+    /* Faq */
+    
+    .faq {
+        margin-bottom: 90px;
+    }
+    
+    .faq__list {
+        margin-top: 40px;
+    }
+    
+    .faq__question {
+        margin-bottom: 16px;
+    }
+    
+    /* //Faq */
+    
+    /* Ask question */
+    
+    .ask-question {
+        margin-bottom: 56px;
+    }
+    
+    .ask-qustion__wrapper {
+        .main_button-color {
+            margin: 24px auto 0px;
+        }
+    }
+    
+    /* //Ask question */
+    
+    /* About us */
+    
+    .about-us__info {
+        max-width: 100%;
+    }
+    
+    .about-us__sub {
+        margin: 24px 0px 32px;
+    }
+    
+    .main-info__wrapper-about-us {
+        .main-info__list {
+            margin-top: 48px;
+        }
+    }
+    
+    .company-priorities__description {
+        align-items: flex-start;
+    }
+    
+    .company-priorities__preview {
+        padding: 20px;
+    }
+    
+    .company-priorities__preview__img {
+        &:not(.company-priorities__preview__img-tablet) {
+            display: none;
+        }
+    }
+    
+    .company-priorities__preview__img-tablet {
+        display: block;
+        width: 120px;
+        height: 120px;
+        margin-right: 20px;
+    }
+    
+    .company-priorities__preview__info {
+        .wrapper {
+            display: flex;
+            align-items: flex-end;
+        }
+        
+        .caption {
+            margin-bottom: 32px;
+        }
+    }
+    
+    .company-priorities__preview__descrip {
+        margin-top: 0px;
+    }
+    
+    .our-progress {
+        margin-top: 80px;
+        padding: 40px 0px 52px;
+    }
+    
+    .our-progress__list {
+        flex-wrap: wrap;
+        margin-top: 32px;
+        margin-bottom: -40px;
+    }
+    
+    .our-progress__item {
+        width: calc(50% - 30px);
+        margin-bottom: 40px;
+    }
+    
+    .our-privilege {
+        margin: 56px 0px;
+    }
+    
+    .our-privilege__list {
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-bottom: -54px;
+    }
+    
+    .our-privilege__item {
+        width: calc(50% - 30px);
+        margin-bottom: 54px;
+    }
+    
+    /* //About us */
+    
+    /* Contacts */
+    
+    .contacts__container {
+        margin-top: 48px;
+    }
+    
+    .contacts__info {
+        flex-direction: column;
+    }
+    
+    .contacts__img {
+        height: 265px;
+        margin-right: 30px;
+    }
+    
+    .contacts__list {
+        margin-bottom: 23px;
+        
+        &:last-child {
+            margin-bottom: 0px;
+        }
+    }
+    
+    /* Contacts */
+    
+    /* Clients callback */
+    
+    .clients-callback {
+        margin-top: 80px;
+        margin-bottom: 56px;
+    }
+    
+    .clients-callback__wrapper {
+        .input_wrapper {
+            margin: 24px 0px 32px;
+        }
+    }
+    
+    /* //Clients callback */
+    
+    /* Partnership */
+    
+    .partnership__list {
+        margin-top: 50px;
+    }
+    
+    .partnership__item {
+        padding: 20px 20px 0px;
+        
+        .main_button-color {
+            top: 20px;
+        }
+    }
+    
+    .partnership-offers__list {
+        margin-top: 105px;
+    }
+    
+    .partnership-offers__item {
+        flex-direction: column;
+    }
+    
+    .partnership-offers__item__img {
+        margin-right: 0px;
+        margin-bottom: 16px;
+    }
+    
+    .partnership-callback {
+        margin-top: 80px;
+        padding: 40px 0px;
+    }
+    
+    .partnership-callback__form {
+        padding: 30px;
+        
+        .main_button-color {
+            margin-top: 24px;
+        }
+    }
+    
+    .partnership-callback__caption {
+        margin-bottom: 20px;
+        line-height: 120%;
+    }
+    
+    /* //Partnership */
 }
 
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
     /* Main Section */
     
     .main-section__wrapper {
@@ -396,6 +671,10 @@
     .main-info__item {
         width: 100%;
         margin-bottom: 40px;
+        
+        &:last-child {
+            margin-bottom: 0px;
+        }
     }
     
     /* /Main info */
@@ -657,7 +936,7 @@
     /* Notification */
     
     .notyfication {
-        padding-top: 56px;
+        margin-top: 50px;
     }
     
     .notyfication-sub {
@@ -666,11 +945,11 @@
     
     .notyfication__wrapper {
         margin-bottom: 56px;
-        
-        .wrapper {
-            margin-top: 24px;
-            flex-direction: column;
-        }
+    }
+    
+    .notyfication__form {
+        margin-top: 24px;
+        flex-direction: column;
     }
     
     .notyfication__list {
@@ -683,8 +962,7 @@
     
     .notyfication__item {
         position: relative;
-        padding: 15px;
-        margin-top: 70px;
+        margin-top: 50px;
         margin-bottom: 0px;
         
         .custome-radio {
@@ -694,6 +972,10 @@
             top: -32px;
             margin: 0px auto;
         }
+    }
+    
+    .notyfication__img {
+        margin: 0px 15px 0px 0px;
     }
     
     .notyfication-subscription {
@@ -746,4 +1028,364 @@
         height: 135px;
         padding: 24px 22px 50px;
     }
+    
+    /* //Helpful */
+    
+    /* Calendar */
+    
+    .calendar__info {
+        width: 100%;
+        margin-left: 0px;
+        padding: 20px;
+    }
+    
+    .calendar__info__details {
+        flex-wrap: wrap;
+    }
+    
+    .details__time {
+        margin-right: 0px;
+    }
+    
+    .details__price {
+        width: 100%;
+        text-align: right;
+        margin-top: 8px;
+        line-height: 24px;
+    }
+    
+    .calendar__slider__list {
+        height: 175px;
+    }
+    
+    .calendar__slider__text {
+        -webkit-line-clamp: 7;
+        height: 175px;
+    }
+    
+    .calendar-info__buttons {
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+    }
+    
+    .calendar__slider__button {
+        position: static;
+        
+        &:first-child {
+            margin-right: 20px;
+        }
+    }
+    
+    .calendar__info__footer {
+        flex-direction: column;
+        margin-top: 20px;
+        
+        .main_button {
+            margin-right: 0px;
+            margin-top: 8px;
+            order: 2;
+        }
+    }
+    
+    /* Full events */
+    
+    .full-events__wrapper {
+        margin: 50px 0px 0px;
+    }
+    
+    .full-events__header {
+        flex-direction: column;
+        align-items: flex-start;
+        
+        .main-button-shadow {
+            margin-top: 16px;
+        }
+    }
+    
+    .full-events__body {
+        &:not(.full-events__body-mobile) {
+            display: none;
+        }
+    }
+    
+    .full-events__body-mobile {
+        display: block;
+        padding: 20px;
+    }
+    
+    .full-events__item {
+        &:first-child {
+            padding-top: 0px;
+        }
+    }
+    
+    .full-events__item__header {
+        padding-bottom: 8px;
+        border-bottom: 1px solid #EDEDFD;
+        margin-bottom: 30px;
+    }
+    
+    .full-events__item__wrapper {
+        flex-direction: column;
+        
+        .info-wrapper {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 4px;
+        }
+        
+        .theme {
+            margin-top: 14px;
+        }
+    }
+    
+    /* //Full events */
+    
+    /* Ask question */
+    
+    .ask-question {
+        margin-bottom: 56px;
+    }
+    
+    .ask-qustion__wrapper {
+        .main_button-color {
+            margin: 24px auto 0px;
+        }
+    }
+    
+    /* //Ask question */
+    
+    /* About us */
+    
+    .about-us__sub {
+        margin: 16px 0px 32px;
+        font-size: 18px;
+        line-height: 130%;
+    }
+    
+    .main-info__wrapper-about-us {
+        margin-top: 56px;
+        
+        .main-info__list {
+            margin-top: 32px;
+            margin-bottom: 56px;
+        }
+    }
+    
+    .company-priorities__description {
+        flex-direction: column;
+    }
+    
+    .company-priorities__list {
+        width: 100%;
+    }
+    
+    .company-priorities__preview {
+        width: 100%;
+        margin-top: 32px;
+        padding: 16px 16px 20px;
+    }
+    
+    .company-priorities__preview__img-tablet {
+        width: 66px;
+        height: 66px;
+        margin-right: 15px;
+    }
+    
+    .company-priorities__preview__info {
+        .caption {
+            margin-bottom: 26px;
+        }
+    }
+    
+    .our-progress {
+        margin-top: 28px;
+        padding: 28px 0px;
+    }
+    
+    .our-privilege {
+        margin-top: 28px;
+    }
+    
+    .our-privilege__list {
+        margin-bottom: -65px;
+    }
+    
+    .our-privilege__item {
+        width: 100%;
+        margin-bottom: 65px;
+        padding: 16px 16px 0px;
+        
+        .main_button-color {
+            top: 16px;
+        }
+    }
+    
+    /* //About us */
+    
+    /* Partnership */
+    
+    .partnership__list {
+        flex-direction: column;
+        margin-top: 32px;
+    }
+    
+    .partnership__item {
+        width: 100%;
+        margin-bottom: 32px;
+        
+        &:last-child {
+            margin-bottom: 0px;
+        }
+    }
+    
+    .partnership-offers__list {
+        flex-direction: column;
+        margin-top: 80px;
+        margin-right: 0px;
+    }
+    
+    .partnership-offers__item {
+        width: 100%;
+        margin-bottom: 32px;
+        margin-right: 0px;
+        
+        &:last-child {
+            margin-bottom: 0px;
+        }
+    }
+    
+    .partnership-callback {
+        margin-top: 56px;
+        padding: 32px 0px;
+    }
+    
+    .partnership-callback__wrapper {
+        flex-direction: column;
+    }
+    
+    .partnership-callback__list {
+        width: 100%;
+    }
+    
+    .partnership-callback__form {
+        width: 100%;
+        margin-bottom: 32px;
+        order: -1;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    
+    /* Notyfication */
+    
+    .notyfication-subscription__item {
+        width: 100%;
+    }
+    
+    /* Calendar */
+    
+    .calendar__slider__list {
+        height: 248px;
+    }
+    
+    .calendar__slider__text {
+        -webkit-line-clamp: 10;
+        height: 248px;
+    }
+    
+    /* /Calendar */
+    
+    /* Faq */
+    
+    .faq {
+        margin-bottom: 56px;
+    }
+    
+    .faq__list {
+        margin-top: 24px;
+    }
+    
+    .faq__question {
+        margin-bottom: 8px;
+    }
+    
+    .faq__img {
+        width: 32px;
+        height: 32px;
+        flex-shrink: 0;
+    }
+    
+    .faq__question__text,
+    .faq__answer__text {
+        padding: 20px;
+        width: 100%;
+        font-size: 12px;
+        line-height: 150%;
+    }
+    
+    .faq__question__text {
+        margin-left: 8px;
+    }
+    
+    .faq__answer__text {
+        margin-right: 8px;
+    }
+    
+    /* //Faq */
+    
+    /* Ask question */
+    
+    .ask-qustion__container {
+        max-width: 100%;
+    }
+    
+    /* //Ask question */
+    
+    /* About us */
+    
+    .our-progress__list {
+        flex-wrap: wrap;
+        margin-top: 24px;
+        margin-bottom: -28px;
+    }
+    
+    .our-progress__item {
+        width: 100%;
+        margin-bottom: 28px;
+    }
+    
+    /* //About us */
+    
+     /* Contacts */
+    
+    .contacts__container {
+        margin-top: 16px;
+        flex-direction: column;
+    }
+    
+    .contacts__img {
+        width: 100%;
+        height: 160px;
+        margin-right: 0px;
+        margin-bottom: 32px;
+    }
+    
+    /* Contacts */
+    
+    /* Clients callback */
+    
+    .clients-callback {
+        margin-top: 56px;
+    }
+    
+    .clients-callback__wrapper {
+        .input_wrapper {
+            width: 100%;
+            margin: 16px 0px;
+        }
+    } 
+    
+    /* //Clients callback */
 }
