--- a/less/_popup.less
+++ b/less/_popup.less
@@ -8,30 +8,51 @@
     max-height: 100%;
     overflow: auto;
     border-radius: 30px;
+    padding: 50px;
+    -ms-overflow-style: none;
+    max-width: 480px;
+    width: 100%;
+    scrollbar-color: rgba(193, 199, 221, 0.75) white;
+    scrollbar-width: 5px;
+    -ms-overflow-style: none;
+    
+    &::-webkit-scrollbar {
+        width: 5px;
+    }
+    
+    &::-webkit-scrollbar-thumb {
+        background: rgba(193, 199, 221, 0.75);
+        border-radius: 4px;
+    }
+    
+    .input_wrapper {
+        margin-bottom: 24px;
+    }
+    
+    .main_button-color {
+        margin: 0px auto;
+    }
 }
-.popup::-webkit-scrollbar {
-    display: none;
-}
+
 .popup.active {
     transform: translate(-50%, -50%) scale(1);
     transition: transform 0.4s;
 }
+
 .close__popup {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 48px;
-    height: 48px;
-    border-radius: 50%;
+    width: 25px;
+    height: 25px;
     position: absolute;
     right: 15px;
     top: 15px;
-    border: none;
-    background: none;
+    font-size: 20px;
     cursor: pointer;
     outline: none;
-    background-color: #F5F7F9;
-    transition: background-color .4s;
+    color: #636c8a;
+    transition: color .4s, transform .4s;
 }
 
 .overlay {
@@ -42,8 +63,9 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.3);
-  z-index: 3;
+    z-index: 3;
 }
+
 .overlay.active {
     display: block;
 }
@@ -89,5 +111,326 @@
     
     .wrapper {
         margin-left: 16px;
+    }
+}
+
+
+.popup-caption {
+    font-size: 24px;
+    line-height: 130%;
+    text-align: center;
+}
+
+.popup-inputs {
+    margin-top: 32px;
+}
+
+.add-reviews__photo {
+    margin: 24px auto 0px;
+    width: 80px;
+    height: 80px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    border-radius: 50%;
+    
+    &.active {
+        + .clear-file-input {
+            display: flex;
+        }
+    }
+}
+
+.add-photo-input__decor {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+    width: 23px;
+    height: 23px;
+    font-size: 11px;
+    border-radius: 50%;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25);
+    transition: color .4s;
+    cursor: pointer;
+}
+
+.clear-file-input,
+.add-person {
+    display: none;
+    letter-spacing: 0.012em;
+    text-transform: uppercase;
+    font-size: 12px;
+    line-height: 150%;
+    font-weight: 700;
+    color: #0009F7;
+    margin: 15px auto 0px;
+    transition: color .4s;
+}
+
+.popup-person__wrapper {
+    position: relative;
+}
+
+.add-person {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    right: 0px;
+    bottom: -22px;
+    
+    .decor {
+        display: block;
+        width: 12px;
+        height: 12px;
+        margin-right: 10px;
+        position: relative;
+        transition: transform .4s;
+        
+        &::before,
+        &::after {
+            content: "";
+            position: absolute;
+            background-color: #0009F7;
+            border-radius: 1px;
+        }
+        
+        &::before {
+            left: 0px;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 100%;
+            height: 1px;
+        }
+        
+        &::after {
+            height: 100%;
+            width: 1px;
+            left: 50%;
+            top: 0px;
+            transform: translateX(-50%);
+        }
+    }
+}
+
+.add-photo-input {
+    input {
+        position: absolute;
+        visibility: hidden;
+    }
+}
+
+.add-reviews__form {
+    overflow: hidden;
+}
+
+.popup__info-text {
+    font-size: 16px;
+    line-height: 150%;
+    text-align: center;
+    margin: 8px 0px 24px;
+}
+
+.popup-programm__caption {
+    font-size: 18px;
+    line-height: 130%;
+    text-align: center;
+}
+
+.popup-program {
+    .main_button-color {
+        text-decoration: none;
+        margin-bottom: 16px;
+        
+        &:last-of-type {
+            margin-bottom: 0px;
+        }
+    }
+}
+
+.popup-checkbox {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-top: 8px;
+    margin-bottom: 10px;
+    
+    .checkbox__wrapper {
+        width: calc(50% - 15px);
+        margin-right: 15px;
+        margin-bottom: 24px;
+    }
+}
+
+// Popup Teacher 
+
+.popup-teacher__header {
+    display: flex;
+    align-items: center;
+    margin-bottom: 24px;
+    
+    .popup-caption {
+        text-align: left;
+        margin-right: 15px;
+    }
+}
+
+.teacher__photo {
+    width: 100px;
+    height: 100px;
+    flex-shrink: 0;
+    border-radius: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.popup-teacher__list {
+    font-size: 16px;
+    line-height: 20px;
+    margin-bottom: 32px;
+}
+
+.popup-teacher__item {
+    padding-left: 24px;
+    margin-bottom: 16px;
+    position: relative;
+    
+    &:last-child {
+        margin-bottom: 0px;
+    }
+    
+    &::before {
+        content: "";
+        position: absolute;
+        left: 0px;
+        top: 5px;
+        width: 8px;
+        height: 8px;
+        border-radius: 50%;
+        background-color: #5C5DF7;
+    }
+}
+
+.popup-teacher__caption {
+    font-size: 16px;
+    line-height: 140%;
+    margin-bottom: 16px;
+}
+
+.popup-teacher__course-list {
+    margin-bottom: 24px;
+}
+
+.popup-teacher__course-item {
+    margin-bottom: 19px;
+    
+    a {
+        display: block;
+        margin-top: 2px;
+        font-size: 14px;
+        line-height: 150%;
+        color: #0009F7;
+        text-decoration: none;
+        transition: color .4s;
+    }
+    
+    &:last-child {
+        margin-bottom: 0px;
+    }
+}
+
+.popup-teacher__reviews {
+    background-color: #F0F0FA;
+    border-radius: 30px;
+    padding: 30px;
+    
+    .popup-teacher__caption {
+        margin-bottom: 8px;
+    }
+    
+    .buttons__wrapper {
+        margin-top: 30px;
+        height: initial;
+    }
+    
+    .slider-button.prev {
+        margin-right: 16px;
+    }
+}
+
+.popup-teacher__reviews__list {
+    position: relative;
+    height: 242px;
+}
+
+.popup-teacher__reviews__item {
+    position: absolute;
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-100px);
+    transition: opacity .6s, transform .6s, visibility 0s .6s;
+    
+    &.show {
+        visibility: visible;
+        opacity: 1;
+        transform: translateY(0px);
+        transition: opacity .6s, transform .6s, visibility 0s 0s;
+    }
+    
+    .content {
+        display: -webkit-box;
+        -webkit-line-clamp: 4;
+        -webkit-box-orient: vertical;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        height: 92px;
+    }
+    
+    .more_info {
+        color: #697293;
+        text-transform: initial;
+        top: -32px;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 130%;
+    }
+    
+    .reviews__item-wrapper {
+        margin-top: 50px;
+    }
+    
+    .reviews__name {
+        margin-bottom: 8px;
+    }
+    
+    .reviews__img {
+        position: static;
+    }
+}
+
+.add-reviews-button {
+    margin-top: 8px;
+    color: #0009F7;
+    font-size: 14px;
+    line-height: 150%;
+    transition: color .4s;
+}
+
+/* //Popup Reviews */
+
+.popup-questions {
+    .popup-inputs {
+        margin-top: 0px;
+    }
+}
+
+.popup-thanks {
+    .popup__info-text {
+        margin: 24px 0px 40px;
     }
 }
