--- a/css/main.css
+++ b/css/main.css
@@ -2000,6 +2000,7 @@ body {
 /* Calendar */
 .calendar-caption {
   margin-top: 30px;
+  text-align: left;
 }
 .calendar__wrapper {
   display: flex;
