--- a/less/_main-block-media.less
+++ b/less/_main-block-media.less
@@ -1372,6 +1372,14 @@
         margin-bottom: 32px;
     }
     
+    .contacts__info {
+        width: 100%;
+    }
+    
+    .contacts__list {
+        max-width: 100%;
+    }
+    
     /* Contacts */
     
     /* Clients callback */
