--- a/less/_hover.less
+++ b/less/_hover.less
@@ -167,6 +167,22 @@
          }
      }
      
+     .calendar__button {
+         &:hover {
+             color: #5C5DF7;
+         }
+     }
+     
+     .calendar__table__data {
+         &:hover {
+             &::before {
+                 opacity: 1;
+             }
+         }
+     }
+     
+     /* // Calendar */
+     
      /* Footer */
      
      .footer-contact__item {
@@ -282,4 +298,6 @@
             color: #0009F7;
         }
     }
+    
+    /* //Contact */
 }
