--- a/css/autoprefixer/main.css
+++ b/css/autoprefixer/main.css
@@ -5500,6 +5500,12 @@ body {
     margin-right: 0px;
     margin-bottom: 32px;
   }
+  .contacts__info {
+    width: 100%;
+  }
+  .contacts__list {
+    max-width: 100%;
+  }
   /* Contacts */
   /* Clients callback */
   .clients-callback {
