--- a/less/_main-block.less
+++ b/less/_main-block.less
@@ -1304,7 +1304,10 @@
 .calendar__table {
     border-collapse: collapse;
     width: 100%;
-    margin-left: -12px;
+}
+
+.calendar__table__header {
+    color: #636C8A;
 }
 
 .calendar__table__tr {
@@ -1332,7 +1335,7 @@
         position: absolute;
         height: 52px;
         width: 42px;
-        left: -4px;
+        left: 0px;
         top: -7px;
         background-color: rgba(0, 9, 247, 0.15);
     }
@@ -1347,6 +1350,8 @@
     
     &.first-day {
         .event_wrapper {
+            width: 46px;
+            left: -4px;
             border-top-left-radius: 30px;
             border-bottom-left-radius: 30px;
         }
@@ -1354,7 +1359,7 @@
     
     &.last-day {
         .event_wrapper {
-            width: 45px;
+            left: 0px;
             border-top-right-radius: 30px;
             border-bottom-right-radius: 30px;
         }
