--- a/less/_general-media.less
+++ b/less/_general-media.less
@@ -1,16 +1,27 @@
-@media (max-width: 1210px) {
+@media screen and (max-width: 1220px) {
+    .position-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+        .workshops__list {
+            max-width: 747px;
+        }
+    }
+}
+
+@media (max-width: 1024px) {
     html.overflow {
         margin-right: 0px;
     }
     
     .container {
-        max-width: 768px;
         padding: 0px 20px;
     }
     
     .main-caption-l {
-        font-size: 48px;
-        line-height: 62px;
+        font-size: 36px;
+        line-height: 110%;
     }
     
     .main-caption-m {
@@ -20,16 +31,10 @@
     
     .main-caption-s {
         font-size: 24px;
-        line-height: 29px;
+        line-height: 100%;
     }
     
     /* Seo block */
-    
-    .seo-block__wrapper {
-        p {
-            margin-bottom: 24px;
-        }
-    }
     
     .seo-caption-m {
         font-size: 24px;
@@ -47,33 +52,30 @@
     /* Filter */
     
     .filter__list {
-        flex-wrap: wrap;
-        padding: 0px;
-        margin-right: -6px;
-        margin-top: 16px;
+        overflow: auto;
+        scrollbar-width: none;
+        -ms-overflow-style: none;
+        width: calc(100vw + 20px);
+        margin-left: -20px;
+        padding-left: 20px;
+        
+        &::after {
+            content: ".";
+            width: 1px;
+            height: 1px;
+            color: transparent;
+            margin-left: 10px;
+        }
+        
+        &::-webkit-scrollbar {
+            display: none;
+        }
         
     }
     
     .filter__item {
-        background-color: #F0F0FA;
-        margin-bottom: 8px;
-        color: #7884AC;
-        margin-right: 6px;
-        padding: 13px 19px;
-        
-        &:last-child {
-            margin-bottom: 0px;
-        }
-    }
-    
-    .announcements__wrapper {
-        .filter__item {
-            background-color: #E7E7FF;
-            
-            &.active {
-                background-color: #DDDDFE;
-            }
-        }
+        margin-right: 30px;
+        flex-shrink: 0;
     }
     
     /* /Filter */
@@ -85,108 +87,117 @@
     }
     
     /* //Breadcrums */
+    
+    /* Seo */
+    
+    .seo-block {
+        margin-bottom: 50px;
+    }
+    
+    /* /Seo */
 }
 
 
 @media (max-width: 767px) {
-     .container {
-        max-width: 576px;
+    .main-caption-l {
+        font-size: 30px;
+        line-height: 110%;
     }
     
-    .main-caption-l {
+    .main-caption-m {
         font-size: 24px;
-        line-height: 32px;
+        line-height: 110%;
+    }
+    
+    .main-caption-s {
+        font-size: 20px;
+        line-height: 110%;
     }
     
     /* Filter */
     
     .filter__wrapper {
         position: relative;
-        z-index: 1;
-        margin-top: 24px;
+        z-index: 2;
+        margin-top: 20px;
+        
+        .filter-icon {
+            display: none;
+        }
         
         &.active {
-            z-index: 2;
-            
             .filter__list {
                 opacity: 1;
                 z-index: 1;
-                transition: opacity 0.4s;
-            }
-            
-            .filter-mobile {
-                .icon-drop {
-                    transform: rotate(180deg);
-                }
-            }
-            
-        }
-        
-        .filter-mobile {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0px 20px;
-            height: 47px;
-            background-color: #fff;
-            border-radius: 30px;
-            color: #7884AC;
-            font-weight: 700;
-            box-shadow: 0px 4px 15px rgba(200, 204, 218, 0.2);
-            
-            p {
-                display: flex;
-                align-items: center;
+                visibility: visible;
+                transition: opacity .4s, visibility 0s 0s;
             }
             
             .icon-drop {
-                font-size: 10px;
-                transition: transform .4s;
-            }
-            
-            .filter-icon {
-                font-size: 14px;
-                padding-right: 8px;
-            }
-            
-            .icon-save-work {
-                font-size: 12px;
-            }
-            
-            .icon-all {
-                font-size: 5px;
+                transform: rotate(180deg);
             }
         }
-        
-        .filter__list {
-            position: absolute;
-            left: 0px;
-            margin: 0px;
-            top: calc(100% + 5px);
-            width: 100%;
-            opacity: 0;
-            background: #FFFFFF;
-            border-radius: 30px;
-            z-index: -1;
-            overflow: auto;
-            box-shadow: 0px 4px 15px rgba(200, 204, 218, 0.2);
+    }
+    
+    .filter-mobile-button {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        padding: 0px 20px;
+        height: 47px;
+        background-color: #fff;
+        border-radius: 30px;
+        font-weight: 700;
+        box-shadow: 0px 4px 15px rgba(200, 204, 218, 0.2);
+
+        .text {
+            width: calc(100% - 30px);
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            text-align: left;
         }
         
-        .filter__item {
-            width: 100%;
-            background-color: #fff;
-            padding: 16px 16px 12px 20px;
-            margin: 0px;
-            border-radius: 0px;
-            
-            &.active {
-                background-color: #DDDDFE;
-            }
-            
-            .filter-icon {
-                display: inline-block;
-                width: 27px;
-            }
+        .icon-drop {
+            font-size: 10px;
+            transition: transform .4s;
+        }
+    }
+
+    .filter__list {
+        flex-direction: column;
+        position: absolute;
+        left: 0px;
+        margin: 0px;
+        top: calc(100% + 7px);
+        width: 100%;
+        padding: 20px;
+        background: #FFFFFF;
+        border-radius: 30px;
+        z-index: -1;
+        overflow: auto;
+        box-shadow: 0px 4px 15px rgba(200, 204, 218, 0.2);
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity .4s, visibility 0s .4s;
+    }
+    
+    .filter__item {
+        width: 100%;
+        background-color: #fff;
+        margin: 0px;
+        border-radius: 0px;
+        margin-bottom: 20px;
+        font-size: 16px;
+        line-height: 24px;
+        
+        &:last-child {
+            margin-bottom: 0px;
+        }
+        
+        &.active {
+            color: #0009F7;
         }
     }
     
@@ -194,17 +205,19 @@
     
     /* Seo block */
     
-    .seo-block {
-        margin-bottom: 56px;
+    .seo-caption-m {
+        font-size: 20px;
+        line-height: 130%;
     }
+    
+    .seo-caption-s {
+        font-size: 16px;
+    }
+    
+    /* //Seo block */
 }
 
 @media screen and (max-width: 576px) {
-    .main-caption-m {
-        font-size: 30px;
-        line-height: 100%;
-    }
-    
     .main_button-color {
         max-width: 100%;
     }
