--- a/less/_general-style.less
+++ b/less/_general-style.less
@@ -71,8 +71,8 @@ body {
 }
 
 .main-caption-l {
-    font-size: 56px;
-    line-height: 67px;
+    font-size: 40px;
+    line-height: 110%;
 }
 
 .main-caption-m {
@@ -109,12 +109,6 @@ body {
     box-shadow: 0px 4px 8px rgba(0, 9, 247, 0.35);
     text-decoration: none;
     
-    &.active {
-        .decor {
-           clip-path: circle(400px at center);
-        }
-    }
-    
     .text {
         z-index: 2;
     }
@@ -140,33 +134,23 @@ body {
 }
 
 .main_button {
-    max-width: 280px;
+    max-width: 236px;
     width: 100%;
     height: 52px;
-    background-color: transparent;
+    background-color: #FFFFFF;
     border-radius: 30px;
     text-transform: uppercase;
-    font-size: 12px;
     font-weight: 700;
-    line-height: 15px;
+    font-size: 13px;
+    line-height: 150%;
     display: flex;
     justify-content: center;
     align-items: center;
-    letter-spacing: 0.012em;
-    color: #0009F7;
-    border: 1px solid #C1C7DD;
+    border: 1px solid #BDBDBD;
     transition: background-color .4s, color .4s;
-    position: relative;
     z-index: 1;
-    overflow: hidden;
     margin: 0px auto;
     text-decoration: none;
-    
-    &.active {
-        .decor {
-           clip-path: circle(400px at center);
-        }
-    }
     
     .text {
         z-index: 2;
@@ -176,20 +160,6 @@ body {
         background-color: #4358FF;
         color: #D9DDFF;
         cursor: initial;
-    }
-    
-    .decor {
-        position: absolute;
-        left: 0px;
-        top: 0px;
-        width: 200%;
-        height: 100%;
-        transform: translateX(-50%);
-        border-radius: 30px;
-        clip-path: circle(0px at center);
-        background-color: #E6E6FF;
-        z-index: 1;
-        transition: clip-path 1s;
     }
 }
 
@@ -207,7 +177,8 @@ body {
     text-align: center;
     text-transform: uppercase;
     background: #FFFFFF;
-    box-shadow: 0px 4px 8px rgba(60, 65, 83, 0.25);
+    border: 1px solid #F9F6F6;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 30px;
     transition: color .4s, box-shadow .4s;
     
@@ -217,7 +188,8 @@ body {
 }
 
 .input_wrapper {
-    display: block;
+    display: flex;
+    flex-direction: column;
     width: 100%;
     position: relative;
     
@@ -306,6 +278,7 @@ body {
     letter-spacing: 0.012em;
     text-transform: uppercase;
     transition: color .4s;
+    text-decoration: none;
 }
 
 .stars__wrapper {
@@ -517,29 +490,58 @@ body {
         transition: opacity .4s;
     }
 }
+
+/* Slider buttons */
+
+
+.buttons__wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+
+    .main-button-shadow {
+        margin: 0px 20px;
+    }
+}
+
+.slider-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 52px;
+    height: 52px;
+    border-radius: 50%;
+    border: 1px solid #F9F6F6;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
     
 /* Filter */
 
 .filter__wrapper {
-    .filter-mobile {
-        display: none;
-    }
+    display: flex;
+    justify-content: center;
+}
+
+.filter-mobile-button {
+    display: none;
 }
 
 .filter__list {
     display: flex;
     margin-top: 30px;
-    padding: 0px 80px;
+    max-width: 960px;
     position: relative;
-    margin-right: -8px;
+    margin-right: -50px;
 }
 
 .filter__item {
-    border-radius: 30px;
-    padding: 13px 20px;
-    margin-right: 8px;
+    display: flex;
+    align-items: center;
+    margin-right: 50px;
     font-weight: 700;
     font-size: 14px;
+    line-height: 20px;
     cursor: pointer;
     transition: background-color .4s, color .4s;
     
@@ -550,14 +552,7 @@ body {
     
     
     &.active {
-        background-color: #DDDDFE;
         color: #0009F7;
-        
-        .filter-icon {
-            &::before {
-                color: #0009F7;
-            }
-        }
     }
     
     .filter-icon {
@@ -579,14 +574,14 @@ body {
 /* Seo block */
 
 .seo-block {
-    margin-bottom: 80px;
+    margin-bottom: 100px;
 }
 
 .seo-block__wrapper {
-    margin-top: 32px;
+    margin-top: 20px;
     
     p {
-        margin-bottom: 32px;
+        margin-bottom: 20px;
         
         &:last-of-type {
             margin-bottom: 0px;
@@ -595,15 +590,15 @@ body {
 }
 
 .seo-caption-m {
-    font-size: 36px;
-    line-height: 47px;
-    margin-bottom: 16px;
+    font-size: 20px;
+    line-height: 130%;
+    margin-bottom: 10px;
 }
 
 .seo-caption-s {
-    font-size: 24px;
-    line-height: 31px;
-    margin-bottom: 16px;
+    font-size: 16px;
+    line-height: 130%;
+    margin-bottom: 10px;
 }
 
 /* /Seo block */
