--- a/less/_popup-media.less
+++ b/less/_popup-media.less
@@ -1,8 +1,9 @@
-@media (max-width: 1160px) {
-    
-}
-
 @media (max-width: 768px) {
+    
+    .popup {
+        max-width: 100%;
+        padding: 30px;
+    }
     
     .popup-reviews {
         padding: 60px 20px 20px;
