--- a/less/_main-block-media.less
+++ b/less/_main-block-media.less
@@ -758,7 +758,6 @@
     
     .manufacturing__tablet {
         display: block;
-        margin-top: 30px;
     }
     
     .manufacturing__list {
@@ -1312,7 +1311,11 @@
         margin-bottom: 50px;
     }
     
-    .manufacturing__tablet {
+    .manufacturing__wrapper {
+        margin-top: 20px;
+    }
+    
+    .map-ukraine__wrapper {
         margin-top: 20px;
     }
     
