--- a/less/_main-block.less
+++ b/less/_main-block.less
@@ -1106,6 +1106,7 @@
 .manufacturing__wrapper {
     position: relative;
     min-height: 365px;
+    margin-top: 30px;
 }
 
 .canvas__wrapper {
@@ -1181,6 +1182,7 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 150px;
+    margin-top: 30px;
     
     .svg-map {
         height: 385px;
